--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,12 @@
 	<main>
 		<div>{% block head %}{% endblock %}</div>
 		<div class="container">{% block container %}{% endblock %}</div>
+
+		<footer class="container">
+			<br><hr>
+			<p class="text-center"><b>ТОС "Математический планктон" 2021</b></p>
+			<p class="text-center"><b>г.Хабаровск</b></p>
+		</footer>
 	</main>
 </body>
 </html>
