--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,6 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 	<link rel="shortcut icon" href="static/img/tos_logo.jpg" type="image/png">
 	<link rel="stylesheet" type="text/css" href="static/css/all.css">
-
 	<title>{% block title %}{% endblock %}</title>
 
 </head>
@@ -67,6 +66,7 @@
 	<main>
 		<div>{% block head %}{% endblock %}</div>
 		<div class="container">{% block container %}{% endblock %}</div>
+		<div class="container-lg">{% block containerLg %}{% endblock %}</div>
 
 		<footer class="container">
 			<br><hr>
