--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 			<div class="p-lg-5 my-5 text-primary text-center bg-white rounded-3">
 				<h1 class="display-4 fw-normal text-bold"><b> Математический планктон </b></h1><br>
 				<p class="lead fw-norma text-bold">Наш слоган</p><br>
-				<a class="btn btn-outline-primary" href="/about_us">Узнать больше
+				<a class="btn btn-outline-primary" href="/about-us">Узнать больше
 				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
 					<path fill-rule="evenodd" d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0v-2z"/>
 					<path fill-rule="evenodd" d="M11.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H1.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
@@ -19,128 +19,128 @@
 	</div>
 {% endblock %}
 
-{% block container %}
+{% block containerLg %}
 	<br>
 	<h1 class="text-bold text-center m-4">Список нашего отряда</h1><br>
-	<div class="accordion" id="accordionPanelsStayOpenExample">
+	<div class="accordion text-center" id="accordionExample">
 		<div class="accordion-item">
-		  <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-			<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-			  <b>Лидер отряда - Бузунов Лев</b>
+		  <h2 class="accordion-header" id="headingOne">
+			<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+			  <b>Командир отряда - Бузунов Лев</b>
 			</button>
 		  </h2>
-		  <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
-			<div class="accordion-body">
-				<img src="static/img/crew.jpeg" class="rounded mx-auto d-block" alt="Бузунов Лев" width="50%">
+		  <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+			<div class="accordion-body	">
+				<img src="static/img/buzunov.jpg" alt="Командир отряда - Бузунов Лев" width="30%">
 			</div>
 		  </div>
 		</div>
 		<div class="accordion-item">
-		  <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-			<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+		  <h2 class="accordion-header" id="headingTwo">
+			<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
 			  <b>Заместитель - Жогло Алексей</b>
 			</button>
 		  </h2>
-		  <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+		  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
 			<div class="accordion-body">
-				<img src="static/img/crew.jpeg" class="rounded mx-auto d-block" alt="Бузунов Лев" width="50%">
+				<img src="static/img/old.jpg" alt="Заместитель - Жогло Алексей" width="30%">
 			</div>
 		  </div>
 		</div>
 		<div class="accordion-item">
-			<h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-			  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+		  <h2 class="accordion-header" id="headingThree">
+			<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
 				Рудь Даниил
-			  </button>
-			</h2>
-			<div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-			  <div class="accordion-body">
-				  <img src="static/img/crew.jpeg" class="rounded mx-auto d-block" alt="Бузунов Лев" width="50%">
-			  </div>
+			</button>
+		  </h2>
+		  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+			<div class="accordion-body">
+				<img src="static/img/rud.jpg" alt="Рудь Даниил" width="30%">
 			</div>
+		  </div>
 		</div>
 		<div class="accordion-item">
-			<h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-			  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+			<h2 class="accordion-header" id="headingFour">
+			<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
 				Долгов Евгений
-			  </button>
+			</button>
 			</h2>
-			<div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-			  <div class="accordion-body">
-				  <img src="static/img/crew.jpeg" class="rounded mx-auto d-block" alt="Бузунов Лев" width="50%">
-			  </div>
+			<div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+			<div class="accordion-body">
+				<img src="static/img/dolgov.jpg" alt="Долгов Евгений" width="30%">
+			</div>
 			</div>
 		</div>
 		<div class="accordion-item">
-			<h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-			  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+			<h2 class="accordion-header" id="headingFive">
+			<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
 				Александров Олег
-			  </button>
+			</button>
 			</h2>
-			<div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-			  <div class="accordion-body">
-				  <img src="static/img/crew.jpeg" class="rounded mx-auto d-block" alt="Бузунов Лев" width="50%">
-			  </div>
+			<div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+			<div class="accordion-body">
+				<img src="static/img/oleg.jpg" alt="Александров Олег" width="30%">
+			</div>
 			</div>
 		</div>
 		<div class="accordion-item">
-			<h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-			  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+			<h2 class="accordion-header" id="headingSix">
+			<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
 				Король Полина
-			  </button>
+			</button>
 			</h2>
-			<div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-			  <div class="accordion-body">
-				  <img src="static/img/crew.jpeg" class="rounded mx-auto d-block" alt="Бузунов Лев" width="50%">
-			  </div>
+			<div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
+			<div class="accordion-body">
+				<img src="static/img/korol.jpg" alt="Король Полина" width="30%">
+			</div>
 			</div>
 		</div>
 		<div class="accordion-item">
-			<h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-			  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+			<h2 class="accordion-header" id="headingSeven">
+			<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
 				Костюк Данил
-			  </button>
+			</button>
 			</h2>
-			<div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-			  <div class="accordion-body">
-				  <img src="static/img/crew.jpeg" class="rounded mx-auto d-block" alt="Бузунов Лев" width="50%">
-			  </div>
+			<div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven" data-bs-parent="#accordionExample">
+			<div class="accordion-body">
+				<img src="static/img/kostuk.jpg" alt="Костюк Данил" width="30%">
+			</div>
 			</div>
 		</div>
 		<div class="accordion-item">
-			<h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-			  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+			<h2 class="accordion-header" id="headingEight">
+			<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
 				Жогло Александр
-			  </button>
+			</button>
 			</h2>
-			<div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-			  <div class="accordion-body">
-				  <img src="static/img/crew.jpeg" class="rounded mx-auto d-block" alt="Бузунов Лев" width="50%">
-			  </div>
+			<div id="collapseEight" class="accordion-collapse collapse" aria-labelledby="headingEight" data-bs-parent="#accordionExample">
+			<div class="accordion-body">
+				<img src="static/img/young.jpg" alt="Жогло Александр" width="30%">
+			</div>
 			</div>
 		</div>
 		<div class="accordion-item">
-			<h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-			  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+			<h2 class="accordion-header" id="headingNine">
+			<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
 				Терещук Никита
-			  </button>
+			</button>
 			</h2>
-			<div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-			  <div class="accordion-body">
-				  <img src="static/img/crew.jpeg" class="rounded mx-auto d-block" alt="Бузунов Лев" width="50%">
-			  </div>
+			<div id="collapseNine" class="accordion-collapse collapse" aria-labelledby="headingNine" data-bs-parent="#accordionExample">
+			<div class="accordion-body">
+				<img src="static/img/nikita.jpg" alt="Терещук Никита" width="30%">
+			</div>
 			</div>
 		</div>
 		<div class="accordion-item">
-			<h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-			  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+			<h2 class="accordion-header" id="headingTen">
+			<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTen" aria-expanded="false" aria-controls="collapseTen">
 				Деспиллер Екатерина
-			  </button>
+			</button>
 			</h2>
-			<div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-			  <div class="accordion-body">
-				  <img src="static/img/crew.jpeg" class="rounded mx-auto d-block" alt="Бузунов Лев" width="50%">
-			  </div>
+			<div id="collapseTen" class="accordion-collapse collapse" aria-labelledby="headingTen" data-bs-parent="#accordionExample">
+			<div class="accordion-body">
+				<img src="static/img/despiler.jpg" alt="Деспиллер Екатерина" width="30%">
+			</div>
 			</div>
 		</div>
 	</div>
