--- a/templates/base.html
+++ b/templates/base.html
@@ -46,17 +46,18 @@
                                   Недели
                                 </button>
                                 <ul class="dropdown-menu">
-                                  <li><a class="dropdown-item" href="/weekend_1">1 неделя</a></li>
-                                  <li><a class="dropdown-item" href="/weekend_2">2 неделя</a></li>
-                                  <li><a class="dropdown-item" href="/weekend_3">3 неделя</a></li>
+                                  <li><a class="dropdown-item" href="/weekend-1">1 неделя</a></li>
+                                  <li><a class="dropdown-item" href="/weekend-2">2 неделя</a></li>
+                                  <li><a class="dropdown-item" href="/weekend-3">3 неделя</a></li>
+                                  <li><a class="dropdown-item" href="/weekend-end">Закрытие ТОС</a></li>
                                 </ul>
                             </div>
 						</form>
 					</nav>
 					<nav class="navbar navbar-white bg-primary mx-4 ">
 						<form class="form-inline">
-							<a href="/galery">
-								<button class="btn btn-outline-light btn-lg" type="button">Галерея</button>
+							<a href="/states">
+								<button class="btn btn-outline-light btn-lg" type="button">Статьи</button>
 							</a>
 						</form>
 					</nav> 
