--- a/templates/weekend_1.html
+++ b/templates/weekend_1.html
@@ -2,3 +2,22 @@
 {% block title %}
     1 неделя ТОС "Математический планктон"
 {% endblock %}
+
+{% block container %}
+    <br>
+    <h1 class="text-light text-center bg-primary rounded p-3 shadow-lg mr-5 ml-5">Мероприятия с 07.06 - 11.06</h1><br>
+    <br>
+    <div class="text-center">
+        <h3 class="text-center"> Участие в эстафете посвященной 85-летию Кировского района 08.06 </h3><br>
+        <img src="static/img/IMG-20210608-WA0037.jpg" width="60%">
+        <img src="static/img/IMG-20210608-WA0039.jpg" width="60%" class="m-4"> 
+    </div><hr><br>
+    <div class="text-center">
+        <h3 class="text-center"> Уборка на территории памятника "Чёрный тюльпан" 09.06 и 11.06 </h3><br>
+        <img src="static/img/IMG-20210609-WA0004.jpg" width="60%">
+    </div><hr><br>
+    <div class="text-center">
+        <h3 class="text-center"> Участие во Всероссийском конкурсе "Окна России" 10.06 </h3><br>
+        <img src="static/img/IMG-20210610-WA0006.jpg" width="60%">
+    </div>
+{% endblock %}
