--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -2,3 +2,139 @@
 {% block title %}
     О ТОС Математический планктон
 {% endblock %}
+
+{% block head %}
+	<div class="container">
+		<br>
+		<h1 class="text-bold text-center m-4">Список нашего отряда</h1><br>
+		<div class="accordion text-center" id="accordionExample">
+			<div class="accordion-item">
+			<h2 class="accordion-header" id="headingOne">
+				<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+				<b>Командир отряда - Бузунов Лев</b>
+				</button>
+			</h2>
+			<div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+				<div class="accordion-body	">
+					<img src="static/img/buzunov.jpg" alt="Командир отряда - Бузунов Лев" width="30%">
+				</div>
+			</div>
+			</div>
+			<div class="accordion-item">
+			<h2 class="accordion-header" id="headingTwo">
+				<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+				<b>Заместитель - Жогло Алексей</b>
+				</button>
+			</h2>
+			<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+				<div class="accordion-body">
+					<img src="static/img/old.jpg" alt="Заместитель - Жогло Алексей" width="30%">
+				</div>
+			</div>
+			</div>
+			<div class="accordion-item">
+			<h2 class="accordion-header" id="headingThree">
+				<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+					Рудь Даниил
+				</button>
+			</h2>
+			<div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+				<div class="accordion-body">
+					<img src="static/img/rud.jpg" alt="Рудь Даниил" width="30%">
+				</div>
+			</div>
+			</div>
+			<div class="accordion-item">
+				<h2 class="accordion-header" id="headingFour">
+				<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+					Долгов Евгений
+				</button>
+				</h2>
+				<div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+				<div class="accordion-body">
+					<img src="static/img/dolgov.jpg" alt="Долгов Евгений" width="30%">
+				</div>
+				</div>
+			</div>
+			<div class="accordion-item">
+				<h2 class="accordion-header" id="headingFive">
+				<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+					Александров Олег
+				</button>
+				</h2>
+				<div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+				<div class="accordion-body">
+					<img src="static/img/oleg.jpg" alt="Александров Олег" width="30%">
+				</div>
+				</div>
+			</div>
+			<div class="accordion-item">
+				<h2 class="accordion-header" id="headingSix">
+				<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+					Король Полина
+				</button>
+				</h2>
+				<div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
+				<div class="accordion-body">
+					<img src="static/img/korol.jpg" alt="Король Полина" width="30%">
+				</div>
+				</div>
+			</div>
+			<div class="accordion-item">
+				<h2 class="accordion-header" id="headingSeven">
+				<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+					Костюк Данил
+				</button>
+				</h2>
+				<div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven" data-bs-parent="#accordionExample">
+				<div class="accordion-body">
+					<img src="static/img/kostuk.jpg" alt="Костюк Данил" width="30%">
+				</div>
+				</div>
+			</div>
+			<div class="accordion-item">
+				<h2 class="accordion-header" id="headingEight">
+				<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
+					Жогло Александр
+				</button>
+				</h2>
+				<div id="collapseEight" class="accordion-collapse collapse" aria-labelledby="headingEight" data-bs-parent="#accordionExample">
+				<div class="accordion-body">
+					<img src="static/img/young.jpg" alt="Жогло Александр" width="30%">
+				</div>
+				</div>
+			</div>
+			<div class="accordion-item">
+				<h2 class="accordion-header" id="headingNine">
+				<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
+					Терещук Никита
+				</button>
+				</h2>
+				<div id="collapseNine" class="accordion-collapse collapse" aria-labelledby="headingNine" data-bs-parent="#accordionExample">
+				<div class="accordion-body">
+					<img src="static/img/nikita.jpg" alt="Терещук Никита" width="30%">
+				</div>
+				</div>
+			</div>
+			<div class="accordion-item">
+				<h2 class="accordion-header" id="headingTen">
+				<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTen" aria-expanded="false" aria-controls="collapseTen">
+					Деспиллер Екатерина
+				</button>
+				</h2>
+				<div id="collapseTen" class="accordion-collapse collapse" aria-labelledby="headingTen" data-bs-parent="#accordionExample">
+				<div class="accordion-body">
+					<img src="static/img/despiler.jpg" alt="Деспиллер Екатерина" width="30%">
+				</div>
+				</div>
+			</div>
+		</div>
+	</div><br>
+	<div class="position-relative overflow-hidden p-3 p-md-5 text-center my-background bg-primary">
+		<h1 class="text-bold text-center m-4 text-white">Расположение нашей школы</h1><br>
+		<div class="text-center mx-4">
+			<img src="static/img/карта.png" class="float-center"><br>
+		</div>
+	</div>
+
+{% endblock %}
